# research-bot

./: .env.example  .gitignore  .gitlab-ci.yml  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
services/core_api/: Dockerfile  pyproject.toml
services/core_api/src/core_api/: app.py  celery_client.py  dependencies.py  logging_setup.py  main.py
services/core_api/src/core_api/api/routes/: agent.py  ask.py  documents.py  health.py  literature.py  search.py
services/core_api/src/core_api/middleware/: logging.py
services/core_api/tests/: test_agent.py  test_agent_stream.py  test_ask.py  test_documents.py  test_health.py  test_literature.py
services/vk_bot/: Dockerfile  pyproject.toml
services/vk_bot/src/vk_bot/: __init__.py  config.py  domain.py  logging_setup.py  main.py
services/vk_bot/src/vk_bot/core_api/: __init__.py  client.py  errors.py
services/vk_bot/src/vk_bot/handlers/: bot_service.py  messages.py  router.py
services/vk_bot/src/vk_bot/security/: rate_limiter.py  sanitizer.py
services/vk_bot/src/vk_bot/state/: conversation.py  message_dedup.py  upload_naming.py  user_queue.py  user_session.py
services/vk_bot/src/vk_bot/transport/: __init__.py  callback_api.py  factory.py  long_polling.py  protocols.py
services/vk_bot/src/vk_bot/vk/: api.py  attachments.py  doc_upload.py  message_enricher.py  outgoing_filter.py
services/vk_bot/tests/: conftest.py  test_attachments.py  test_bot_service.py  test_config.py  test_core_api_client.py  test_core_api_errors.py  test_doc_upload.py  test_main_startup.py  test_message_dedup.py  test_message_enricher.py  test_outgoing_filter.py  test_rate_limiter_v4.py  test_router.py  test_sanitizer.py  test_transport.py  test_upload_naming.py  test_user_queue.py  test_vk_api_download.py
services/worker/: Dockerfile  pyproject.toml
services/worker/src/worker/: beat.py  celery_app.py  tasks.py
