[project]
name = "research-bot"
version = "0.1.0"
description = "RAG assistant for scientific research papers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "core-api",
    "research-shared",
    "vk-bot",
    "worker",
]

[tool.uv]
package = false
default-groups = ["dev"]

[tool.uv.workspace]
members = ["packages/*", "services/*"]

[tool.uv.sources]
core-api = { workspace = true }
research-shared = { workspace = true }
vk-bot = { workspace = true }
worker = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "fakeredis>=2.26",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages", "services"]
pythonpath = [
    "packages/research_shared/src",
    "services/core_api/src",
    "services/vk_bot/src",
    "services/worker/src",
]
