[project]
name = "core-api"
version = "0.1.0"
description = "Core API service: hybrid search and RAG backend"
requires-python = ">=3.12"
dependencies = [
    "research-shared",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
research-shared = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/core_api"]

[project.scripts]
core-api = "core_api.main:run"
