[project]
name = "vk-bot"
version = "0.1.0"
description = "VK bot service for research-bot RAG assistant"
requires-python = ">=3.12"
dependencies = [
    "research-shared",
    "vk-api>=11.9",
    "httpx>=0.28",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic-settings>=2.7",
    "redis>=5.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
research-shared = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/vk_bot"]

[project.scripts]
vk-bot = "vk_bot.main:run"

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "fakeredis>=2.26",
]
