[project]
name = "worker"
version = "0.1.0"
description = "Celery worker: background PDF ingestion and indexing"
requires-python = ">=3.12"
dependencies = [
    "research-shared",
    "celery[redis]>=5.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
research-shared = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/worker"]
